tests/ui/macros/issue-11692-1.stderr
error: cannot find macro `testo`
  --> $DIR/issue-11692-1.rs:2:12
   |
LL |     print!(testo!());
   |            ^^^^^ not found in this scope

error: aborting due to 1 previous error

