tests/ui/macros/issue-11692-1.rs
fn main() {
    print!(testo!()); //~ ERROR cannot find macro `testo`
}
